@@ -277,6 +277,7 @@ exec $numactlcmd $envcmd java \
         --add-opens=java.base/java.lang=ALL-UNNAMED \
         --add-opens=java.base/java.net=ALL-UNNAMED \
         --add-opens=java.base/java.nio=ALL-UNNAMED \
+        --add-opens=java.base/java.util=ALL-UNNAMED \
         --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
         --add-opens=java.base/sun.security.ssl=ALL-UNNAMED  \
         -Djava.io.tmpdir="${VESPA_HOME}/tmp" \
