@@ -183,6 +183,7 @@ StartCommand() {
         --add-opens=java.base/java.lang=ALL-UNNAMED \
         --add-opens=java.base/java.net=ALL-UNNAMED \
         --add-opens=java.base/java.nio=ALL-UNNAMED \
+        --add-opens=java.base/java.util=ALL-UNNAMED \
         --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED \
         --add-opens=java.base/sun.security.ssl=ALL-UNNAMED  \
         -Djava.library.path="$VESPA_HOME/lib64" \
